# sci-algorithm

./: .gitignore  EXPERIMENTS.md  README.md  STATUS.md  pyproject.toml
configs/: re1000.yaml  re1000_gn.yaml  re1000_gradnorm.yaml  re1000_muon.yaml  re1000_nocurric.yaml  re1000_short.yaml  re1000_short_warmup.yaml  re1000_soap_batched.yaml  smoke.yaml
configs/ablation/: base.yaml  big.yaml  gradnorm.yaml  rwf.yaml
docs/superpowers/plans/: 2026-05-31-pinn-cavity-re1000.md
docs/superpowers/specs/: 2026-05-31-pinn-cavity-re1000-design.md
reference/: README.md  lid-driven-regularized-r7.prm
scripts/: bench_autodiff.py  bench_batching.py  bench_gn.py  bench_soap.py  bench_step.py  compare.py  evaluate.py  profile_step.py  refine_gn.py  train.py
scripts/slurm/: submit_exp.sh  train.sbatch
src/pinn_cavity/: __init__.py  benchmark_ghia.py  checkpoint.py  config.py  diagnostics.py  evaluate.py  geometry.py  losses.py  metrics.py  natural_gradient.py  networks.py  optimizers.py  physics.py  reference.py  soap_batched.py  train.py
src/pinn_cavity/data/: dns_re1000_r10.npz
tests/: test_benchmark.py  test_config.py  test_evaluate.py  test_geometry.py  test_losses.py  test_natural_gradient.py  test_networks.py  test_optimizers.py  test_physics.py  test_train_smoke.py
